Fix swal popup visibility

--- a/src/components/Auth/Register.css
+++ b/src/components/Auth/Register.css
@@ -20,6 +20,6 @@
     padding: 0 2vw;
 }
 
-.swal-popup{
+.swal2-container {
     z-index: 9999;
 }
